// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders Buttons of different size correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--primary zw-button--xl zw-button--radius"
    type="button"
  >
    <span>
      xl尺寸
    </span>
  </button>
  <button
    class="zw-button zw-button--primary zw-button--lg zw-button--radius"
    type="button"
  >
    <span>
      lg尺寸
    </span>
  </button>
  <button
    class="zw-button zw-button--primary zw-button--md zw-button--radius"
    type="button"
  >
    <span>
      默认尺寸
    </span>
  </button>
  <button
    class="zw-button zw-button--primary zw-button--sm zw-button--radius"
    type="button"
  >
    <span>
      sm尺寸
    </span>
  </button>
  <button
    class="zw-button zw-button--primary zw-button--xs zw-button--radius"
    type="button"
  >
    <span>
      xs尺寸
    </span>
  </button>
</div>
`;

exports[`Button renders Buttons of different theme correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--default zw-button--md zw-button--radius"
    type="button"
  >
    <span>
      default
    </span>
  </button>
  <button
    class="zw-button zw-button--primary zw-button--md zw-button--radius"
    type="button"
  >
    <span>
      info
    </span>
  </button>
  <button
    class="zw-button zw-button--success zw-button--md zw-button--radius"
    type="button"
  >
    <span>
      success
    </span>
  </button>
  <button
    class="zw-button zw-button--warning zw-button--md zw-button--radius"
    type="button"
  >
    <span>
      warning
    </span>
  </button>
  <button
    class="zw-button zw-button--error zw-button--md zw-button--radius"
    type="button"
  >
    <span>
      error
    </span>
  </button>
</div>
`;

exports[`Button renders Buttons with radius or round props correctly 1`] = `
<div>
  <div>
    <button
      class="zw-button zw-button--default zw-button--md zw-button--radius"
      type="button"
    >
      <span>
        default
      </span>
    </button>
    <button
      class="zw-button zw-button--primary zw-button--md zw-button--radius"
      type="button"
    >
      <span>
        info
      </span>
    </button>
    <button
      class="zw-button zw-button--success zw-button--md zw-button--radius"
      type="button"
    >
      <span>
        success
      </span>
    </button>
    <button
      class="zw-button zw-button--warning zw-button--md zw-button--radius"
      type="button"
    >
      <span>
        warning
      </span>
    </button>
    <button
      class="zw-button zw-button--danger zw-button--md zw-button--radius"
      type="button"
    >
      <span>
        error
      </span>
    </button>
  </div>
  <div>
    <button
      class="zw-button zw-button--default zw-button--md zw-button--round"
      type="button"
    >
      <span>
        default
      </span>
    </button>
    <button
      class="zw-button zw-button--primary zw-button--md zw-button--round"
      type="button"
    >
      <span>
        info
      </span>
    </button>
    <button
      class="zw-button zw-button--success zw-button--md zw-button--round"
      type="button"
    >
      <span>
        success
      </span>
    </button>
    <button
      class="zw-button zw-button--warning zw-button--md zw-button--round"
      type="button"
    >
      <span>
        warning
      </span>
    </button>
    <button
      class="zw-button zw-button--danger zw-button--md zw-button--round"
      type="button"
    >
      <span>
        error
      </span>
    </button>
  </div>
</div>
`;

exports[`Button renders anchor Button correctly 1`] = `
<a
  class="zw-button zw-button--primary zw-button--md zw-button--radius zw-button--link"
  href="https://www.baidu.com"
  target="_blank"
>
  <span>
    百度一下
  </span>
</a>
`;

exports[`Button renders disaled Button correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--default zw-button--md zw-button--radius zw-button--disabled"
    disabled=""
    type="button"
  >
    <span>
      default
    </span>
  </button>
</div>
`;

exports[`Button renders loading Button correctly 1`] = `
<div>
  <button
    class="zw-button zw-button--info zw-button--md zw-button--radius zw-button--loading"
    type="button"
  >
    <span
      class="zw-activity-indicator zw-activity-indicator--circular"
    >
      <svg
        viewBox="31 31 62 62"
      >
        <circle
          cx="62"
          cy="62"
          fill="none"
          r="28.5"
          style="stroke-width:5"
        />
      </svg>
    </span>
    <span>
      加载中
    </span>
  </button>
</div>
`;
